# bf-interpreter

./: .gitignore  CMakeLists.txt  bf  brainfuck.c.txt  main.c
docs/: brainfuck.puml
lib/: stack.c  stack.h
tests/: hello-world (no comments).bf  hello-world (no loops).bf
